crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/003.cypher
CREATE (n:Person); MATCH (m) RETURN m
